Highlight today was not working on Friday because we were checking if time is less than weekday[friday+1] and there is no day set for Saturday.  Fixed this, and make the phone shift page highlight the current shift via the current time. I also removed the bored around the days on the currenthistory table and this required a little modification in CSS.

--- a/trunk/css/main.css
+++ b/trunk/css/main.css
@@ -98,8 +98,7 @@ table.phoneshift {
 	border-collapse:collapse;
 }
 
-table.phoneshift, td.phoneshift
-{
+table.phoneshift, td.phoneshift {
 	border: 1px solid black;
 }
 
@@ -150,7 +149,7 @@ table.currenthistory_buttons {
 	 width: 100%;
 }
 
-.currentdate {
+th.currentdate, td.currentdate {
 	background: #FFFFB2;
 	border: 1px solid;
 }
@@ -214,7 +213,7 @@ th.currenthistory {
 }
 
 tr.currenthistory {
-    border: 1px solid;
+    border: 0px none;
 }
 
 td.currenthistory {
